fixing send button mobile

--- a/small.css
+++ b/small.css
@@ -196,13 +196,16 @@
 }
 
 #formBottom #sendContainer button {
-  width: 3em !important;
   height: 3em !important;
   margin-left: 0.2em;
 }
 
+#local, #mailin {
+  width: 50%;
+}
+
 .checked {
-  opacity: 0 !important;
+  opacity: 0 !important
 }
 
 #about-area  {
